src/objects/ExperiencePackage_PMDProgram__c.object
<CustomObject>
    <description>Junction object between Experience Package and PMD Program</description>
    <fields>
        <fullName>Experience_Package__c</fullName>
        <label>Experience Package</label>
        <referenceTo>ExperiencePackage__c</referenceTo>
        <relationshipLabel>PMD Programs</relationshipLabel>
        <relationshipName>ExperiencePackage_PMDPrograms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program_PMD__c</fullName>
        <label>Program (PMD)</label>
        <referenceTo>PMD_Program__c</referenceTo>
        <relationshipLabel>Experience Packages</relationshipLabel>
        <relationshipName>ExperiencePackage_PMDPrograms</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Support_Status__c</fullName>
        <label>Experience Package Status</label>
        <picklist>
            <picklistValues>
                <fullName>Fully Supported at NPI Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Supported (PlayStore/MR Update)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Supported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Supported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ExperiencePackage_PMDProgram</label>
    <nameField>
        <displayFormat>ExpPkgProg-{000000}</displayFormat>
        <label>ExperiencePackage_PMDProgram Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ExperiencePackage_PMDPrograms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>